# xndbc

./: .gitignore  .readthedocs.yaml  README.md  conf.py  environment.yml  pyproject.toml
docs/: Makefile  changelog.md  conduct.md  conf.py  contributing.md  environment.yml  examples.md  examples.rst  index.md  index.rst  install.md  installation.rst  make.bat  notes.md  notes.rst  quickstart.md  quickstart.rst
docs/examples/: index.md
examples/: california_buoys_example.ipynb  getting_started.ipynb  helpers.py  realtime_woods_hole_scripps.ipynb
src/nbdc/: __init__.py  core.py
src/xndbc/: __init__.py  core.py  ndbc.py  station_metadata.py
src/xndbc/ndbc_parser/: __init__.py  historical_parser.py  ndbc_parser.py  realtime_parser.py
tests/: test_basic.py  test_integration.py  test_notebooks.py
