[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xndbc"
version = "0.1.0"
description = "A package to aggregate buoy data into xarray objects"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {text = "MIT"}
authors = [
  {name = "Anthony Meza"},
]
dependencies = [
  "numpy>=2.0.0",
  "pandas>=2.2.0",
  "xarray>=2024.9.0",
  "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "nbclient>=0.10.0",
  "nbformat>=5.10.0",
  "ipykernel>=6.29.0",
  "matplotlib>=3.9.2",
  "cartopy>=0.24.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
  "integration: tests that require live network access and external services",
]
testpaths = ["tests"]
